add background-attachment to fixed

--- a/css/forms-exercise-style.css
+++ b/css/forms-exercise-style.css
@@ -1,3 +1,4 @@
 body {
-    background-image: url('https://images.pexels.com/photos/566378/pexels-photo-566378.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940')
+    background-image: url('https://images.pexels.com/photos/566378/pexels-photo-566378.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-attachment: fixed;
 }
