--- a/css/login.css
+++ b/css/login.css
@@ -11,6 +11,8 @@ body, html {
 }
 
 form {
+    padding: 1em;
+    border: 1em;
     /* This form should be separated from other elements by 1em */
     /* There must be 1em between the content and the border of this element */
 }
@@ -19,34 +21,58 @@ fieldset {
     -webkit-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
+    padding: 1em;
+    background-color: #ffffff;
     /* There must be 1em between the content and the border of this element */
     /* It should have no border */
     /* Its background should be white */
 }
 
 .width-80 {
+    max-width: 80%;
+    margin: 0 auto;
     /* The element with this class should be 80% of the width and it must be centered */
     /* Read how to center elements with margin here: http://learnlayout.com/margin-auto.html*/
 }
 
 .form-group {
+    width: 100%;
+    padding-top: .5em;
+    padding-bottom: .5em;
     /* This element must use 100% of the width */
     /* It should have a separation of .5em from elements on top of it and below it*/
 }
 
 .form-label {
+    font-weight: bold;
     /* The text of a label must be bold */
 }
 
 .btn-block {
+    width: 100%;
     /* This element should use 100% of the width */
 }
 
 .btn {
+    padding: 8px;
+    color: white;
+    font-weight: bold;
+    border: solid 1px lightgray;
     /* There must be a separation of 8px between the text and the border of this element */
     /* The text color of this element should be white and bold */
     /* The border of this element should be 1px, and its color should be light grey */
     background-color: #0fb784;
+    cursor: pointer;
+    transition: all 500ms ease-in-out;
+}
+
+.btn:hover{
+    background-color: blue;
+    transform: scale(98%);
+}
+
+.btn:active {
+    transform: scale(105%);
 }
 
 .form-control {
@@ -56,7 +82,9 @@ fieldset {
     /* You'll need to use the `calc` function to make the width of this element match the width of the button */
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: 100%;
+    margin: .5em 0;
+    padding: 4px 0;
+    width: calc(100% - 4px);
 }
 
 
