--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -34,6 +34,9 @@ h2, h3 {
     padding: 1em;
     margin: 0 auto;
     /* enter needed declarations here */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 section {
@@ -41,7 +44,6 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 15px 0;
 }
 
 section:nth-of-type(1) {
@@ -120,7 +122,7 @@ section:nth-of-type(6) {
     background: coral;
     height: 14em;
     /* enter needed declarations here */
-    align-content: space-between;
+    align-content: space-around;
     flex-wrap: wrap;
 }
 
