--- a/css/twitter.css
+++ b/css/twitter.css
@@ -5,9 +5,11 @@
     --light-bg: #FFF;
     --separator-color: #DDD;
 }
+
 * {
     box-sizing: border-box;
 }
+
 body, html {
     background-color: var(--main-bg);
     height: 100%;
@@ -22,6 +24,7 @@ header {
     min-height: 300px;
     padding-top: 275px;
 }
+
 a {
     color: var(--link-color);
 }
@@ -39,17 +42,27 @@ a {
     justify-content: space-around;
     width: 50%;
 }
+
 .nav-link {
     color: var(--main-link-color);
     font-weight: bold;
     text-decoration: none;
 }
+
 .nav-link:hover {
     color: var(--link-color);
 }
+
 .profile {
     background: var(--light-bg);
 }
+
+.profile-image {
+    position: absolute;
+    right: 90%;
+    top: 40%;
+}
+
 .btn {
     border: 1px solid var(--main-link-color);
     color: var(--main-link-color);
@@ -58,18 +71,22 @@ a {
     padding: 8px;
     border-radius: 5px;
 }
+
 .btn-large {
     font-size: 1.3em;
     padding: 10px;
 }
+
 .img-circle {
     border-radius: 100%;
     border: 4px solid var(--light-bg);
 }
+
 .text-right {
     text-align: right;
     justify-self: center;
 }
+
 .text-muted {
     color: var(--main-link-color);
 }
@@ -81,3 +98,65 @@ a {
 .profile-header {
     margin-right: auto;
 }
+
+.container {
+    display: flex;
+    margin-top: 3%;
+    justify-content: flex-end;
+}
+
+.profile-form {
+    padding: 15px 0;
+}
+
+.profile-details {
+    display: flex;
+    flex-direction: column;
+    align-content: space-evenly;
+    margin-right: auto;
+    margin-left: 1%;
+}
+
+.profile-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0 5%;
+    height: 10%
+}
+
+.media {
+    display: flex;
+    background: var(--light-bg);
+}
+
+.timeline {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 0 10px;
+    width: 50%;
+    padding: 1% 0;
+}
+
+.who-to-follow {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    margin: 0 10px;
+    width: 20%;
+    padding: 1% 0;
+}
+
+.media-image {
+    height: 60px;
+}
+
+.media-body {
+    padding: 10px 0;
+}
+
+
+
+
