--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,7 @@
 .opaqueRedText {
     opacity: .70;
     color: mediumslateblue;
+    font-family: 'Oswald', sans-serif;
 }
 
 #jumbotron-container {
