--- a/css/konami.css
+++ b/css/konami.css
@@ -1,18 +1,8 @@
 #hiddenSnoop {
-    background-color: #3B94D9;
-}
-
-.neonGreenText {
-    color: #fff;
-    text-shadow:
-            0 0 7px #0fa,
-            0 0 10px #0fa,
-            0 0 21px #0fa,
-            0 0 42px #0fa,
-            0 0 82px #0fa,
-            0 0 92px #0fa,
-            0 0 102px #0fa,
-            0 0 151px #0fa;
+    /*background-color: #3B94D9;*/
+    background-image: url("../pictures_and_stuff/discoball.gif");
+    background-repeat: repeat;
+    height: 100%;
 }
 
 .resizeDiscoBall {
@@ -21,8 +11,8 @@
 }
 
 #snoopDogg {
-    height: 30em;
-    width: 20em;
+    height: 40em;
+    width: 25em;
 }
 
 .smallerSnoop {
