--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -2,20 +2,39 @@
     width: 50%
 }
 
+body {
+    background-image: url('../pictures_and_stuff/beachbackground.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .weather-logo{
     width: 10rem;
     height:10rem;
 }
 
-.cardTypeThing {
-    height: 20%
+.weather-pic {
+    height: 17rem;
+    width: 19rem;
 }
 
-.weather-pic {
-    height: 13rem;
-    width: 15rem;
+.weather-pic-repeat {
+    height: 15rem;
+    width: 17rem;
 }
 
 .locationInput {
     width: 80%;
+}
+
+.setWidth80 {
+    width: 80%;
+}
+
+.cardStyle {
+    background-color: rgba(255, 255, 255, 0.25);
+}
+
+.ramaraja {
+    font-family: 'Oswald', sans-serif;
 }
