add ability to drag marker

--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -52,3 +52,9 @@ body {
 .ramaraja {
     font-family: 'Oswald', sans-serif;
 }
+
+.shadowy {
+    -moz-box-shadow: 0 0 3px #ccc;
+    -webkit-box-shadow: 0 0 3px #ccc;
+    box-shadow: 0 0 3px #ccc;
+}
